--- a/install_apache.yml
+++ b/install_apache.yml
@@ -2,8 +2,20 @@
 
 - hosts: all
   become: true
+  gather_facts: no
   tasks:
+
+  - name: update repo index
+    apt:
+      update_cache: yes
+
 
   - name: Install apache2 package
     apt:
       name: apache2
+      state: latest
+
+  - name: add php support for apache
+    apt:
+      name: libapache2-mod-php
+      state: latest
