--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,3 +2,5 @@
 inventory = inventory
 private_key_file = ~/.ssh/ansible
 remote_user = ubuntu
+callbacks_enabled = ansible.posix.profile_tasks
+host_key_checking = False
