--- a/install_apache.yml
+++ b/install_apache.yml
@@ -2,20 +2,39 @@
 
 - hosts: all
   become: true
-  gather_facts: no
   tasks:
 
   - name: update repo index
     apt:
       update_cache: yes
-
+    when: ansible_distribution == "Ubuntu"    
 
   - name: Install apache2 package
     apt:
       name: apache2
       state: latest
+    when: ansible_distribution == "Ubuntu"
 
   - name: add php support for apache
     apt:
       name: libapache2-mod-php
       state: latest
+    when: ansible_distribution == "Ubuntu"
+
+  
+  - name: update repo index
+    dnf:
+      update_cache: yes
+    when: ansible_distribution == "CentOS"
+
+  - name: Install apache2 package
+    dnf:
+      name: httpd
+      state: latest
+    when: ansible_distribution == "CentOS"
+
+  - name: add php support for apache
+    dnf:
+      name: php
+      state: latest
+    when: ansible_distribution == "CentOS"
