--- a/install_apache.yml
+++ b/install_apache.yml
@@ -21,20 +21,10 @@
       state: latest
     when: ansible_distribution == "Ubuntu"
 
-  
-  - name: update repo index
-    dnf:
-      update_cache: yes
-    when: ansible_distribution == "CentOS"
-
-  - name: Install apache2 package
-    dnf:
-      name: httpd
-      state: latest
-    when: ansible_distribution == "CentOS"
-
-  - name: add php support for apache
-    dnf:
-      name: php
-      state: latest
-    when: ansible_distribution == "CentOS"
+  - name: copy
+    copy:
+      src: default_site.html
+      dest: /var/www/html/index.html
+      owner: root
+      group: root
+      mode: 0644 
