--- a/install_apache.yml
+++ b/install_apache.yml
@@ -8,6 +8,7 @@
     apt:
       update_cache: yes
     when: ansible_distribution == "Ubuntu"    
+    register: cucc
 
   - name: Install apache2 package
     apt:
@@ -21,6 +22,19 @@
       state: latest
     when: ansible_distribution == "Ubuntu"
 
+  - name: start httpd
+    service:
+      name: apache2
+      state: started
+      enabled: yes
+    when: ansible_distribution == "Ubuntu"
+
+  - name: restart httpd
+    service:
+      name: apache2
+      state: restarted
+    when: cucc.changed
+
   - name: copy
     copy:
       src: default_site.html
@@ -28,3 +42,8 @@
       owner: root
       group: root
       mode: 0644 
+
+  - name: install unzip
+    package:
+      name: unzip
+
